<resources>
    <string name="app_name">HotelSpaPosadaBonita</string>
    <string name="action_search">action_search</string>
    <string name="_client">Cliente:</string>
    <string name="david_robles">David Robles</string>
    <string name="type_service">Tipo Servicio:</string>
    <string name="_date">Fecha</string>
    <string name="chinese_massage">Masaje Chino</string>
    <string name="_total">Total:</string>
    <string name="accept">Aceptar</string>
    <string name="manage_packages">Gestión Paquetes</string>
    <string name="_id">ID</string>
    <string name="_package">Paquete</string>
    <string name="_description">Descripción</string>
    <string name="_cost">Costo</string>
    <string name="_operation">Operación</string>
    <string name="catalogue_of_package">Catálogo de Paquetes</string>
    <string name="_room">Habitación</string>
    <string name="_service">Servicio</string>
    <string name="_plus">+</string>
    <string name="text_test">Este es un ejemplo de texto de prueba de diseño.</string>
    <string name="_price">Precio:</string>
    <string name="_500">$500</string>
    <string name="_reserve">Reservar...</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="open">Open:</string>
    <string name="name_service">Nombre Servicio</string>
    <string name="btn_previuos"><![CDATA[<-]]></string>
    <string name="btn_next"><![CDATA[->]]></string>
    <string name="description">Descripción</string>
    <string name="description_service">Descripción</string>
    <string name="cost">Costo</string>
    <string name="information">Información</string>
    <string name="pdf">PDF</string>
    <string name="voucher">Comprobante</string>
    <string name="download_voucher">Descargar comprobante</string>
    <string name="time">Hora:</string>
</resources>
