<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_service"
    android:textSize="@dimen/text_size"
    android:textColor="@color/color_black"
    android:layout_centerHorizontal="true"
    android:id="@+id/txv_name_service" />
    <ImageSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/imgsw">
    </ImageSwitcher>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:textSize="@dimen/text_size"
        android:background="@color/spa_color"
        android:id="@+id/btn_next"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imgsw"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_previuos"
        android:textSize="@dimen/text_size"
        android:background="@color/spa_color"
        android:id="@+id/btn_previus"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/imgsw"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_service"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_red"
        android:id="@+id/txv_description"
        android:layout_below="@id/btn_previus"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_test"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:id="@+id/txv_test"
        android:layout_below="@id/txv_description"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_reserve"
        android:textSize="@dimen/text_size"
        android:background="@color/spa_color"
        android:layout_below="@id/txv_test"
        android:layout_alignParentRight="true"/>
</RelativeLayout>