<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/catalogue_of_package"
    android:id="@+id/txv_tittle"
    android:layout_centerHorizontal="true"
    android:textColor="@color/color_black"
    android:textSize="@dimen/text_size"/>
    <ImageView
    android:layout_width="@dimen/size_image"
    android:layout_height="@dimen/size_image"
    android:background="@drawable/spa1"
    android:id="@+id/imv_spa1"
        android:layout_below="@id/txv_tittle"
        android:layout_toRightOf="@id/imv_spa2"
        android:layout_toEndOf="@id/imv_spa2" />
    <ImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:background="@drawable/spa2"
        android:id="@+id/imv_spa2"
        android:layout_below="@id/txv_tittle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_room"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_red"
        android:id="@+id/txv_habitacion"
        android:layout_below="@id/imv_spa1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_test"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:id="@+id/txv_habitacion_info"
        android:layout_below="@id/txv_habitacion"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_plus"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_red"
        android:id="@+id/txv_mas"
        android:layout_below="@id/txv_habitacion_info"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_service"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_red"
        android:id="@+id/txv_servicio"
        android:layout_below="@id/txv_mas"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_test"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:id="@+id/txv_servicio_info"
        android:layout_below="@id/txv_servicio"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_price"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:id="@+id/txv_precio"
        android:layout_below="@id/txv_servicio_info"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_500"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:id="@+id/txv_precio_info"
        android:layout_below="@id/txv_servicio_info"
        android:layout_toRightOf="@id/txv_precio"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_reserve"
        android:textSize="@dimen/text_size"
        android:background="@color/spa_color"
        android:layout_below="@id/txv_precio_info"
        android:layout_toRightOf="@id/txv_precio_info"
        android:onClick="nextActivity"/>
</RelativeLayout>