<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="@dimen/image_size_view"
        android:layout_height="@dimen/image_size_view"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="@dimen/size_margin"
        android:id="@+id/imv_photo"
        android:onClick="nextActivity"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/size_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_name"
            android:text="@string/name"
            android:textSize="@dimen/text_size"
            android:layout_marginBottom="@dimen/size_margin"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_info"
            android:text="@string/information"
            android:layout_marginBottom="@dimen/size_margin"
            android:textColor="@color/accept_button"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_description_service"
            android:text="@string/_description"
            android:layout_marginBottom="@dimen/size_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txv_cost"
            android:text="@string/_cost"/>
    </LinearLayout>
</LinearLayout>