<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.pantallas_hotelspa.ReservationService">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_client"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:paddingHorizontal="@dimen/padding_space"
        android:paddingTop="@dimen/padding_space"
        android:id="@+id/txv_client"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/david_robles"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_red"
        android:layout_toEndOf="@id/txv_client"
        android:paddingTop="@dimen/padding_space"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="@dimen/text_size"
                android:id="@+id/txv_time"
                android:textColor="@color/color_black"
                android:layout_below="@id/txv_client"
                android:paddingTop="@dimen/padding_space"
                android:paddingHorizontal="@dimen/padding_space"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12 a-m 1 p.m"
                android:textSize="@dimen/text_size"
                android:id="@+id/txv_time_full"
                android:textColor="@color/color_red"
                android:layout_below="@id/txv_client"
                android:layout_toEndOf="@+id/txv_time"
                android:paddingTop="@dimen/padding_space"
                android:paddingHorizontal="@dimen/padding_space"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_date"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:paddingHorizontal="@dimen/padding_space"
        android:paddingTop="@dimen/padding_space"
        android:id="@+id/txv_name_client"
        android:layout_below="@id/txv_time"/>
    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_name_client"
        android:layout_centerHorizontal="true">
    </CalendarView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_service"
        android:textSize="@dimen/text_size"
        android:textColor="@color/color_black"
        android:paddingHorizontal="@dimen/padding_space"
        android:id="@+id/txv_type"
        android:layout_below="@id/calendarView"/>
    <TextView
        android:id="@+id/txv_type_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txv_type"
        android:layout_alignBottom="@+id/txv_type"
        android:layout_toEndOf="@+id/txv_type"
        android:paddingTop="@dimen/padding_space"
        android:text="@string/chinese_massage"
        android:textColor="@color/color_red"
        android:textSize="@dimen/text_size" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_total"
        android:textSize="@dimen/text_size"
        android:paddingHorizontal="@dimen/padding_space"
        android:textColor="@color/color_black"
        android:id="@+id/txv_total"
        android:layout_below="@id/txv_type"
        android:paddingTop="@dimen/padding_space"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textSize="@dimen/text_size"
        android:background="@color/spa_color"
        android:layout_below="@id/txv_total"
        android:layout_alignParentRight="true"
        android:onClick="nextActivity"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>